Changelog
=========

0.2.8 (unreleased)
------------------

- Aggiunti stili per terza colonna in home sezione (#140)
    [neko]
- Aggiunti link stampa e invia su vista elenco uffici (#141)
    [neko]
- Aggiunta icona mail su eventi (#129)
    [neko]
- Fix stile orari
- RSS in home

0.2.7 (2016-02-29)
------------------

- Update translation for rg.prenotazioni (#135)
  [cekk]


0.2.6 (2016-01-28)
------------------

- Fix zcml registration in browser for promex (that doesn't have rg.prenotazioni) [cekk]


0.2.5 (2016-01-28)
------------------

- Fix dependencies [cekk]


0.2.4 (2016-01-25)
------------------

- Fix for pd.prenotazioni (#121) [cekk]


0.2.3 (2016-01-21)
------------------

- 0.2.2 was a fake release too..fixed templates [cekk]


0.2.2 (2016-01-21)
------------------

- 0.2.1 was a fake release [cekk]


0.2.1 (2016-01-21)
------------------

- Fix form_pagamenti_online labels [cekk]


0.2.0 (2016-01-11)
------------------

- Sistemati stili generici per contenuti [Neko]
- Fix problems with editable menu [cekk]


0.1.1 (2016-01-08)
------------------

- fix document_byline viewlet for anonymous (#80)
  [cekk]


0.1.0 (2016-01-05)
------------------

- Initial release