@@ -12,6 +12,7 @@ Changelog
     [neko]
 - Fix stile orari
 - RSS in home
+- fix nuove portlet in home (#144)
 
 0.2.7 (2016-02-29)
 ------------------
